created a redirected index

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -7,9 +7,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <style>
-    /* Remove the navbar's default margin-bottom and rounded borders */ 
-    .navbar {
+<style type="text/css">
+  .navbar {
       margin-bottom: 0;
       border-radius: 0;
     }
@@ -48,10 +47,10 @@
         }
 
       #map{
-      	height:350px;
-      	width:100%;
-      }
-  </style>
+        height:350px;
+        width:100%;
+  
+</style>
 </head>
 <body>
 
